fixed the navbar so it would collapse when responsive

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -3,7 +3,7 @@
   text-align: center;
   background-image: url("https://images.unsplash.com/photo-1573496005828-adb22e525798?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDJ8fHdlYiUyMGRlc2lnbmVyfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=60");
   padding: 160px 20px;
-  background-position: 60% 40%;
+  background-position: 35% 65%;
   background-repeat: no-repeat;
 }
 
